# sp1-zeth

./: README.md
contracts/src/fixtures/: fixture.json
contracts/test/: SP1.t.sol
lib/: Cargo.toml
lib/src/: consts.rs  input.rs  lib.rs
lib/src/builder/: mod.rs
lib/src/builder/execute/: ethereum.rs  optimism.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml
