[package]
name = "zeth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
zeth-primitives = { path = "../primitives" }
serde = "1.0"
revm = { git = "https://github.com/sp1-patches/revm", branch = "patch-v5.0.0", default-features = false, features = [
    "std",
    "serde",
    "optimism",
] }
hashbrown = { version = "0.14.3", features = ["inline-more"] }
anyhow = "1.0"
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
thiserror = "1.0"
once_cell = "1.18"
ruint = { version = "1.10", default-features = false }
log = "0.4"
ethers-core = { version = "2.0", features = ["optimism"] }
chrono = { version = "0.4", default-features = false }
flate2 = "1.0.26"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
